# Spooder

./: .gitignore
SpooderBody/lib/: I2CDevice.h
SpooderBody/src/: CMakeLists.txt  leg_servo.cpp  main.cpp
SpooderBody/src/lib/: leg.h  leg_servo.h
